Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98785

Button menu pops up at wrong position on a QGraphicsProxyWidget

    XMLWordPrintable

Details

    • Linux/X11, Windows
    • 7febf0b30e (qt/qtbase/dev) 7febf0b30e (qt/tqtc-qtbase/dev) 2aee4faca8 (qt/tqtc-qtbase/6.2)

    Description

      This is a regression between 5.15.2 and 6.2

      Menu on a QToolButton widget in a QGraphicsScene pops up at wrong position

      Samplce code to reproduce the issue:

      #include <QApplication>
      #include <QGraphicsView>
      #include <QToolButton>
      #include <QMenu>
      
      int main(int argc, char *argv[])
      {
          QApplication a(argc, argv);
      
          QGraphicsScene scene;
          auto *button = new QToolButton();
          button->setText("B");
          auto *menu = new QMenu();
          menu->addAction("Action1");
          menu->addAction("Action2");
          button->setMenu(menu);
          button->setPopupMode(QToolButton::InstantPopup);
          scene.addWidget(button);
      
          QGraphicsView view(&scene);
          view.show();
          return a.exec();
      }
      

      Run application and press on a button:

      Works ok in Qt 5.15.2:

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bibr Andreas Aardal Hanssen
            volodymyr_zibarov Volodymr Zibarov
            Votes:
            2 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes