QGraphicsScene: Fix popup position for QGraphicsProxyWidget

screenGeometry() for proxy widget was returning visible part of the
scene instead of screen geometry for enclosing first view

Pass button center position to screenGeometry() to get correct screen
for cases when graphics view occupies two screens

Fixes: QTBUG-98785
Change-Id: Idaeb3c3faf739751c93624a06fa0fd3d65388236
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 7febf0b30e8a6d74f0d78b0e727c52d18672a991)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>